# gt-tooling

./: .gitignore  .gitmodules  README.md  node-data.json  tst.mjs  tsx-jsx-tsconfig.jsonc
.github/workflows/: download-logs.yml  security-scan.yml  version-bump.yml
actions-logs/: #11907798652 - download-logs.txt
actions-logs/logs_31002268789/: 0_security-scan (ubuntu-latest).txt  1_security-scan (windows-latest).txt
backups-code/: initial-ver-tooling-meister.7z
detect-projects/: tst.mjs
detect-projects/development/: config.json
dev-env-meister/: GUIDELINES.md  config.json  dev-env-meister.ps1  ensure-python.ps1
dev-env-meister/config/: python-setup.json
dg-pwsh-profile/: Microsoft.PowerShell_profile.ps1  powershell.config.json
dg-pwsh-profile/completions/: completions-tauri-pwsh.ps1  rustup-v1.86.0-nightly.ps1
dogma-enforcer/: Test-GuidelinesCompliance.ps1  Update-Guidelines.ps1  ai-guidelines.md  dev-guidelines.md  guidelines-source.json
dogma-enforcer/schemas/: guidelines-schema.json
log-master/: AdvancedLogging.psm1  LogArchiver.ps1  LogMaster.ps1  LogMaster.psd1
log-master/docs/: README.md
logging/: AdvancedLogging.psd1  Execute-WithLogging.ps1  Install-LoggingSystem.ps1  LogAnalyzer.ps1
shared/scripts/: bump-version.ps1  update-submodules.ps1
shared/workflows/: security-scan.yml  version-bump.yml
svg-toolkit/: README.md  path_to_object.py  pyproject.toml
svg-toolkit/svg_toolkit/: __init__.py  path.py
svg-toolkit/tests/: test_path.py
web-viewer/: .process-ids  .recent_projects  package.json
(+2 files in other folders)
